--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <img src="img/a3pDistAut.png">
+                        <img src="img/a3pDistAut.png">VZ0004minatitlan
                     </li>
                     <li>
-                        <h7>minatitlán</h7>
+                        <h7>a3p e-commerce</h7>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Productos</a>
@@ -123,8 +123,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Impermeabilizante</h4>
-                                    <h4 class="subheading"> Imperllanta a3p</h4>
+                                    <h4>a3p Imperllanta</h4>
+                                    <h4 class="subheading"> Impermeabilizante</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Tiempo de secado 3 hrs, elástica, excelente adherencia a diversas superficies, rendimiento 17 m2 por cubeta aplicando a dos manos; garantía de 3, 5 y 10 años. Ecológico, no contiene solventes orgánicos ni contaminantes tóxicos o dañinos a las personas ni al medio ambiente.</p>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Pintura</h4>
+                                    <h4>a3p Pintura Vinilica</h4>
                                     <h4 class="subheading">Decoración, salud, rendimeinto</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -151,7 +151,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Sellador</h4>
+                                    <h4>a3p Sellador elastomérico</h4>
                                     <h4 class="subheading">Rendimiento y protección</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -165,7 +165,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>UtilCel</h4>
+                                    <h4>a3p UtilCel</h4>
                                     <h4 class="subheading">Protección, decoración, más vida</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -175,17 +175,15 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Utilwall.png" element.style="padding-top:60px" alt="">
-
-
+                                <img class="img-circle img-responsive" src="img/about/Utilwall.png" alt style="padding-top: 40px">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Pintura Impermeable</h4>
-                                    <h4 class="subheading">Interior y exterior</h4>
+                                    <h4>a3p Utilwall</h4>
+                                    <h4 class="subheading">Pintura Impermeable</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Pintura vinil-acrílica con alto poder cubriente, fácil de limpiar, evita la formación de hongos, bacterias y microorganismos. Garantía hasta por 10 años, rendimiento de 3.5 m2 por litro.</p>
+                                    <p class="text-muted">Pintura vinil-acrílica con alto poder cubriente, para interior y exterior, fácil de limpiar, evita la formación de hongos, bacterias y microorganismos. Garantía hasta por 10 años, rendimiento de 3.5 m2 por litro.</p>
                                 </div>
                             </div>
                         </li>
@@ -213,7 +211,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                  <a href="http://www.mercadolibre.com/impermeabilizantesimperllanta">
+                  <a href="http://articulo.mercadolibre.com.mx/MLM-570727280-a3p-imperllanta-impermeabilizante-_JM">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -234,7 +232,7 @@
                     <p class="text-muted">Si tu compra es a mayoreo o eres desarrollador de inmuebles, puedes solictar precio especial enviándonos un mail con tus necesidades de producto.</p>
                 </div>
                 <div class="col-md-4">
-                  <a href="FichasWEBa3p">
+                  <a href="">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
@@ -444,11 +442,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contáctanos</h2>
-                    <h3 class="section-subheading text-muted">Puedes comunicarte con nosotros al: (922) 230 9862; Enviarnos un mail aquí mismo (abajo)
-                       o visitarnos personalmente en: Calle 2 de Oct, local 2-E, Col. Sta. Clara, Minatitlán, Ver. C.p. 96730.</h3>
+                    <h3 class="section-subheading text-muted">Puedes comunicarte con nosotros al: (922) 230 9862; <p>Enviarnos un mail: minatitlan@a3p.mx</p>
+                       <p>o visitarnos personalmente en: Calle 2 de Oct, local 2-E, Col. Sta. Clara, Minatitlán, Ver. C.p. 96730.</p></h3>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
@@ -479,7 +477,7 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
