--- a/index.html
+++ b/index.html
@@ -232,14 +232,27 @@
                     <p class="text-muted">Si tu compra es a mayoreo o eres desarrollador de inmuebles, puedes solictar precio especial enviándonos un mail con tus necesidades de producto.</p>
                 </div>
                 <div class="col-md-4">
-                  <a href="">
+
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Fichas Técnicas</h4>
-                  </a>
+                    <h4 class="service-heading">Fichas Técnicas:</h4>
                     <p class="text-muted">Entérate de las especificaciones detalladas de cada uno de nuestros productos, cualquier duda que no sea cubierta, envíanos un mail y con mucho gusto te respondemos.</p>
+                    <a href="a3pimperllanta 10 años.pdf">
+                      <p>Imperllanta</p>
+                    </a>
+                    <a href="Pintura_Vinilica.pdf">
+                      <p>Pintura Vinilica</p>
+                    </a>
+                    <a href="UTILCEL PINTURA VIAL.pdf">
+                      <p>Utilcel</p>
+                    </a>
+                    <a href="Utilwall_ok.pdf">
+                      <p>UtilWall</p>
+                    </a>
+                    <p>Sellador</p>
+                    
                 </div>
             </div>
         </div>
