--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                  <a href="http://articulo.mercadolibre.com.mx/MLM-570727280-a3p-imperllanta-impermeabilizante-_JM">
+                  <a href="https://www.kichink.com/stores/a3p-imperllanta/">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -219,7 +219,7 @@
                     <h4 class="service-heading">Compra Segura</h4>
                   </a>
 
-                    <p class="text-muted">Puedes comprar a través de mercado libre bajo sus reglas de compra segura o puedes comprar directamente con nosotros enviándonos un mail.</p>
+                    <p class="text-muted">Puedes comprar a través de  Kichink o Mercado Libre bajo sus reglas de compra segura respectivas o puedes comprar directamente con nosotros enviándonos un mail.</p>
                 </div>
                 <div class="col-md-4">
                   <a href="Precios.pdf">
@@ -252,7 +252,7 @@
                       <p>UtilWall</p>
                     </a>
                     <p>Sellador</p>
-                    
+
                 </div>
             </div>
         </div>
