--- a/index.html
+++ b/index.html
@@ -239,16 +239,16 @@
                     </span>
                     <h4 class="service-heading">Fichas Técnicas:</h4>
                     <p class="text-muted">Entérate de las especificaciones detalladas de cada uno de nuestros productos, cualquier duda que no sea cubierta, envíanos un mail y con mucho gusto te respondemos.</p>
-                    <a href="a3pimperllanta 10 años.pdf">
+                    <a href="a3pimperllanta.pdf">
                       <p>Imperllanta</p>
                     </a>
-                    <a href="Pintura_Vinilica.pdf">
+                    <a href="Pinturas Vinilicas.pdf">
                       <p>Pintura Vinilica</p>
                     </a>
-                    <a href="UTILCEL PINTURA VIAL.pdf">
+                    <a href="a3pUtilcel.pdf">
                       <p>Utilcel</p>
                     </a>
-                    <a href="Utilwall_ok.pdf">
+                    <a href="a3pUtilwall.pdf">
                       <p>UtilWall</p>
                     </a>
                     <p>Sellador</p>
