--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contáctanos</h2>
-                    <h3 class="section-subheading text-muted">Puedes comunicarte con nosotros al: (922) 230 9862; <p>Enviarnos un mail: minatitlan@a3p.mx</p>
-                       <p>o visitarnos personalmente en: Calle 2 de Oct, local 2-E, Col. Sta. Clara, Minatitlán, Ver. C.p. 96730.</p></h3>
+                    <h3 class="section-subheading text-muted">Puedes comunicarte con nosotros al: (228)8.368.970; <p>Enviarnos un mail: minatitlan@a3p.mx</p>
+                       <p>o visitarnos personalmente en: Santiago de Chile 33, Col. Nuevamina norte, Minatitlán, Ver. C.p. 96730.</p></h3>
                 </div>
             </div>
             <!-- <div class="row">
